--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT=3000
+API_HOST=localhost
+API_PORT=3000
 NODE_ENV=development
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2024
