--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,21 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^5.1.1",
+    "concurrently": "^9.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "mssql": "^10.0.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "dotenv": "^17.2.1",
+    "express": "^4.21.0",
+    "express-session": "^1.18.1",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
+    "https": "^1.0.0",
+    "jose": "^6.0.10",
+    "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.4",
+    "socket.io": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
