--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "element-plus": "^2.12.0",
+    "pinia": "^3.0.4",
     "vue": "^3.3.8",
     "vue-router": "^4.6.4"
   },
